# anypay-rust

./: .gitignore  API.md  Cargo.toml  LICENSE  README.md  requirements.txt
.github/workflows/: aws.yml  ci.yml  cross-release.yml  release.yml
Formula/: anypay-server.rb  anypay-wallet.rb  anypay.rb
docs/: asyncapi.yaml  websockets_server_readme.md
docs/guides/: blockbook-integration.md
scripts/: monitor_invoices.py  setup_aws_ecs.sh  test_amqp.py  test_cancel_invoice.py  test_create_invoice.py  test_daemon.py  test_daemon_comprehensive.py  test_list_prices.py  test_payment_option_expiry.py  test_ping.py  test_prices.py
src/: amqp.rs  anypay_server.rs  auth.rs  blockbook.rs  client.rs  config.rs  confirmations.rs  ethereum.rs  event_dispatcher.rs  http.rs  invoices.rs  lib.rs  main.rs  payment_options.rs  prices.rs  server.rs  session.rs  supabase.rs  types.rs  uri.rs  wallet.rs  xrpl.rs
src/cards/: btc.rs  doge.rs  eth.rs  fb.rs  mod.rs  sol.rs  xrp.rs
src/payment/: mod.rs  uri.rs
src/plugin/: bsv.rs  btc.rs  eth.rs  fb.rs  mod.rs  rlusd_eth.rs  sol.rs  xrp.rs
tests/: invoice_tests.rs
