[package]
name = "anypay-websockets"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "*"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgrest = "1.0"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.6"
tower = "0.4"
lapin = "2.3"
dotenv = "0.15" 