[package]
name = "anypay-websockets"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "*"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgrest = "1.0"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.6"
tower = "0.4"
lapin = "2.3"
dotenv = "0.15" 
xrpl-rust = { git = "https://github.com/sephynox/xrpl-rust", tag = "v0.4.0", version = "0.4.0" }
clap = "4.0"
lazy_static = "1.4"
shortid = "1.0.6"
bigdecimal = "0.4.7"
anyhow = "1.0"
alloy = { version = "0.3", features = ["full"] }
futures-util = "0.3"
nanoid = "0.4.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true  # Automatically strip symbols from the binary

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"