[package]
name = "anypay"
description = "AnyPay is a payment processing platform that allows you to accept payments from multiple cryptocurrencies and fiat currencies."
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "anypay-client"
path = "src/bin/anypay-client.rs"

[[bin]]
name = "anypay-server"
path = "src/bin/anypay-server.rs"

[[bin]]
name = "anypay-wallet"
path = "src/bin/anypay-wallet.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgrest = "1.0"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.6"
tower = "0.4"
lapin = "2.3"
dotenv = "0.15" 
xrpl-rust = { git = "https://github.com/sephynox/xrpl-rust", tag = "v0.4.0", version = "0.4.0" }
lazy_static = "1.4"
shortid = "1.0.6"
bigdecimal = "0.4.7"
anyhow = "1.0"
alloy = { version = "0.3", features = ["full"] }
futures-util = "0.3"
nanoid = "0.4.0"
url = "2.4"
http = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
async-trait = "0.1"
hex = "0.4"

# Bitcoin and wallet dependencies
bitcoin = { version = "0.31", features = ["rand", "serde"] }
bip32 = { version = "0.5", features = ["secp256k1", "alloc"] }
secp256k1 = { version = "0.28", features = ["rand"] }
rand_core = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true  # Automatically strip symbols from the binary
[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"
